# california-prison-labor-project

./: README.md  citations.md  main.py  package-lock.json  package.json  pyproject.toml
cleaning/: graph_creation.ipynb
data/: Bakersfield Cost of Living.csv  Industry.csv  Nationwide Wages.csv  Revenue Comparison.csv  Wage Comparison.csv
milestones/: interactive-draft.md  interactive-proposal.md
scratch/: notes.md
www/: index.html  style.css
