[project]
name = "california-prison-labor-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "polars>=1.35.2",
    "ruff>=0.14.7",
    "vl-convert-python>=1.8.0",
]
